--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
   },
   "dependencies": {
     "@next/eslint-plugin-next": "14.0.1",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.4.4",
     "next": "14.0.1",
+    "next-auth": "^5.0.0-beta.19",
     "react": "18",
-    "react-dom": "18"
+    "react-dom": "18",
+    "react-icons": "^5.2.1",
+    "recharts": "^2.12.7",
+    "use-debounce": "^10.0.1"
   },
   "devDependencies": {
     "eslint": "8",
